[gd_scene load_steps=4 format=3 uid="uid://doejr0rb0c3oh"]

[ext_resource type="Script" path="res://main/ui/itembox/itembox.gd" id="1_e2unq"]
[ext_resource type="Theme" uid="uid://cwrkv7lqfv2jk" path="res://main/ui/theme.tres" id="2_eed3u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkr3i"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)

[node name="ItemBox" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 29.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xkr3i")
script = ExtResource("1_e2unq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_eed3u")

[node name="StatContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="ItemLabels1" type="Label" parent="PanelContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.529412, 0.568627, 0.533333, 1)
theme_override_constants/line_spacing = 0
text = "Gold:
Soma:
Bomb:
Corpse:"
visible_characters_behavior = 1

[node name="ItemCounts1" type="Label" parent="PanelContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.529412, 0.568627, 0.533333, 1)
theme_override_constants/line_spacing = 0
text = "999
3
3
10"
visible_characters_behavior = 1

[node name="ItemLabels2" type="Label" parent="PanelContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.529412, 0.568627, 0.533333, 1)
theme_override_constants/line_spacing = 0
text = "Kila:
Cross:
Brain:
Orb:"
visible_characters_behavior = 1

[node name="ItemCounts2" type="Label" parent="PanelContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.529412, 0.568627, 0.533333, 1)
theme_override_constants/line_spacing = 0
text = "3
1
1
1"
visible_characters_behavior = 1
